--- a/menuShop/menuShop.html
+++ b/menuShop/menuShop.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/menuShop/css/gagalin.css">
     <title>Cardápio - Sushi House</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
@@ -15,8 +16,8 @@
           <img src="/Image/Logo.png" style="margin: auto;width:10%;">
         </div>
       </nav>
-      <div class="container" style="border-width: 5px;">
-        <img src="/Image/gagalin.png" style="margin:auto;"><br>
+      <div class="container">
+        <img src="/Image/gagalin.png" class="container23" style=""><br>
         <p style="text-align: left;"><i class="fa-solid fa-sushi"></i>Oriental & Japonesa</p>
         <p style="text-align: left;"><i class="fa-solid fa-sushi"></i>Pedido mínimo: R$ 30,00</p>
         <p style="text-align: left;"><i class="fa-solid fa-sushi"></i>Rua Fernando de Noronha, 1461 - Santa Cândida, Curitiba/PR</p>
