--- a/menuShop/menuShop.html
+++ b/menuShop/menuShop.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/menuShop/css/gagalin.css">
+    <link rel="stylesheet" href="/menuShop/css/gagalin.css">
     <title>Cardápio - Sushi House</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@6.1.1/css/fontawesome.min.css" integrity="sha384-zIaWifL2YFF1qaDiAo0JFgsmasocJ/rqu7LKYH8CoBEXqGbb9eO+Xi3s6fQhgFWM" crossorigin="anonymous">
+    <script src="https://kit.fontawesome.com/97fcfb3a3a.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </head>
@@ -16,11 +16,22 @@
           <img src="/Image/Logo.png" style="margin: auto;width:10%;">
         </div>
       </nav>
-      <div class="container">
-        <img src="/Image/gagalin.png" class="container23" style=""><br>
-        <p style="text-align: left;"><i class="fa-solid fa-sushi"></i>Oriental & Japonesa</p>
-        <p style="text-align: left;"><i class="fa-solid fa-sushi"></i>Pedido mínimo: R$ 30,00</p>
-        <p style="text-align: left;"><i class="fa-solid fa-sushi"></i>Rua Fernando de Noronha, 1461 - Santa Cândida, Curitiba/PR</p>
+      <div class="container" >
+        <div class="card" id="information">
+
+          <p id="titulo">CARDÁPIO SUSHI HOUSE</p>
+          <br>
+          <p class="info"><i class="fa-light fa-bowl-chopsticks"></i>Oriental & Japonesa &emsp;&emsp; Pedido mínimo: R$ 30,00 &emsp;&emsp; Rua Fernando de Noronha, 1461 - Santa Cândida, Curitiba/PR</p>
+        </div>
+        <br>
+        <hr>
+        <select class="form-control mds" >
+          <option>Entradas</option>
+          <option>Combinados</option>
+          <option>Pratos Quentes</option>
+          <option>Bebidas</option>
+          <option>uramakis</option>
+        </select>
       </div>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
